# relic-mercs-game

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  generateCerts.sh  texUV.py
project-plan/: Project_Plan.html  renderer.uml
source/: auth.c  auth.h  base64.c  base64.h  error_handling.c  error_handling.h  file_handling.c  file_handling.h  game_logic.c  game_logic.h  helpers.c  helpers.h  host_custom_attributes.h  html_server.c  html_server.h  main.c  net_ids.c  net_ids.h  packet_handlers.c  packet_handlers.h  session_token.h  sync_queue.c  sync_queue.h  validators.h  websocket_handlers.c  websocket_handlers.h  websockets.c  websockets.h
test-clients/: client.html  serveClient.js  serveClient.mjs
test-clients/website/: charsheet.html  game.html  index.html  index.js  login.html  login.js  styles.css
test-clients/website/code/: gl-buffers.js  gl-draw-scene.js  networking.js  renderer.js  user-inputs.js
test-clients/website/images/: IMAGE_LICENSES.txt
test-clients/website/src/: canvas-getter.js  charsheet.js  game-logic.js  gl-buffers.js  gl-draw-scene.js  gl-matrix-min.js  helpers.js  networking.js  renderer.js  type-hints.js  ui-utils.js  user-inputs.js
test-clients/website/src/rendering/: drawing.js  gl-buffers.js  gl-draw-scene.js  objects.js  renderer.js  resource-loading.js  shaders.js  type-hints.js
test-clients/website/src/ui/: ui-utils.js
